Use actual bundles and CSS in asset partial

--- a/templates/partials/assets.html
+++ b/templates/partials/assets.html
@@ -1,5 +1,5 @@
-<script type="module" src="/static/current/js/vendor.min.js"></script>
-<script type="module" src="/static/current/js/app.min.js"></script>
-<link rel="stylesheet" href="/static/current/css/styles.min.css">
+<script type="module" src="/static/current/js/bundle-utils-1.min.js"></script>
+<script type="module" src="/static/current/js/bundle-auth-nav.min.js"></script>
+<link rel="stylesheet" href="/css/global-gw.min.css">
 <script type="module" src="/static/current/js/sw-register.min.js"></script>
 
